tests/samples/positive/control_flow/control_flow.ax
module control_flow;

fn main() -> i32 {
    var x: i32 = 0;
    while x < 3 {
        x = x + 1;
        if x == 2 {
            continue;
        }
    }
    return x;
}
