tests/samples/negative/types/reference_invalid_pointee.ax
module reference_invalid_pointee;

type Bad = &void;

fn main() -> i32 {
    return 0;
}
